Correcion de la estrucura del proyecto final mejorando la interfaz grafica y mas

--- a/Proyecto Final/frontend/config.json
+++ b/Proyecto Final/frontend/config.json
@@ -1,4 +1,5 @@
 {
-  "INTERVALO_BACKUP_SEG": 600,
-  "API_URL": "http://127.0.0.1:8000/api"
+  "INTERVALO_BACKUP_SEG": 60,
+  "API_URL": "http://127.0.0.1:8000/api",
+  "BACKUP_FORMAT": "json"
 }
